fix: 1-webpack update storybook

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "webpack serve --env port=3000",
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --mode production",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "repository": {
     "type": "git",
@@ -31,12 +31,16 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
-    "@storybook/addon-actions": "^7.0.23",
-    "@storybook/addon-essentials": "^7.0.23",
-    "@storybook/addon-links": "^7.0.23",
-    "@storybook/builder-webpack5": "^7.0.23",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/react": "^7.0.23",
+    "@storybook/addon-actions": "^7.1.0-alpha.41",
+    "@storybook/addon-essentials": "^7.1.0-alpha.41",
+    "@storybook/addon-interactions": "^7.1.0-alpha.41",
+    "@storybook/addon-links": "^7.1.0-alpha.41",
+    "@storybook/addon-mdx-gfm": "^7.1.0-alpha.41",
+    "@storybook/blocks": "^7.1.0-alpha.41",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^7.1.0-alpha.41",
+    "@storybook/react-webpack5": "^7.1.0-alpha.41",
+    "@storybook/testing-library": "^0.2.0-next.1",
     "@svgr/webpack": "^8.0.1",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
@@ -46,6 +50,7 @@
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "sass-loader": "^13.3.2",
+    "storybook": "^7.1.0-alpha.41",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
     "typescript-loader": "^1.1.3",
