--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "webpack serve --env port=3000",
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --mode production",
+    "eslint:ts": "eslint \"**/*.{ts,tsx}\"",
+    "eslint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
+    "stylelint:check": "npx stylelint \"**/*.{css,scss,sass}\"",
+    "stylelint:fix": "npx stylelint \"**/*.{css,scss,sass}\" --fix",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -24,7 +28,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -44,11 +48,19 @@
     "@svgr/webpack": "^8.0.1",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.8.1",
+    "eslint": "^8.43.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
+    "prettier": "2.8.8",
     "sass-loader": "^13.3.2",
     "storybook": "^7.1.0-alpha.41",
     "style-loader": "^3.3.3",
