--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "css-loader": "^6.8.1",
     "eslint": "^8.43.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
