--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "sass-loader": "^13.3.2",
     "storybook": "^7.1.0-alpha.41",
     "style-loader": "^3.3.3",
+    "stylelint": "^15.9.0",
+    "stylelint-config-standard-scss": "^10.0.0",
+    "stylelint-order": "^6.0.3",
     "ts-loader": "^9.4.3",
     "typescript-loader": "^1.1.3",
     "typescript-plugin-css-modules": "^5.0.1",
