--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,4 +1,14 @@
 {
-  "extends": ["stylelint-config-standard-scss"],
-  "plugins": ["stylelint-order"]
+  "extends": [
+    "stylelint-config-standard-scss",
+    "stylelint-config-idiomatic-order"
+  ],
+  "plugins": ["stylelint-order"],
+  "reportDescriptionlessDisables": true,
+  "reportInvalidScopeDisables": true,
+  "reportNeedlessDisables": true,
+  "rules": {
+    "color-hex-case": "lower",
+    "declaration-property-value-no-unknown": true
+  }
 }
