--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "storybook": "^7.1.0-alpha.41",
     "style-loader": "^3.3.3",
     "stylelint": "^15.9.0",
+    "stylelint-config-idiomatic-order": "^9.0.0",
     "stylelint-config-standard-scss": "^10.0.0",
     "stylelint-order": "^6.0.3",
     "ts-loader": "^9.4.3",
