--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-focus-lock": "^2.9.5",
     "react-icons": "^4.10.1",
     "typescript": "^5.0.4"
   },
