--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
 
   "editor.codeActionsOnSave": {
     "source.fixAll.stylelint": true
-  }
+  },
+  "i18n-ally.localesPaths": [
+    "public/locales",
+    "src/providers/i18n"
+  ]
 }
