--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
   "homepage": "https://github.com/JIlyaS/JIlyaS.github.io#readme",
   "dependencies": {
     "classnames": "^2.3.2",
+    "i18next": "^23.4.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-focus-lock": "^2.9.5",
+    "react-i18next": "^13.0.3",
     "react-icons": "^4.10.1",
     "typescript": "^5.0.4"
   },
