--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,6 +7,7 @@
   "plugins": ["stylelint-order", "stylelint-scss"],
   "rules": {
     "selector-pseudo-element-no-unknown": null,
-    "selector-class-pattern": null
+    "selector-class-pattern": null,
+    "selector-no-vendor-prefix": null
   }
 }
