--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "homepage": "https://github.com/JIlyaS/JIlyaS.github.io#readme",
   "dependencies": {
+    "antd": "^5.8.2",
     "classnames": "^2.3.2",
+    "formik": "^2.4.3",
     "i18next": "^23.4.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
@@ -36,7 +38,9 @@
     "react-focus-lock": "^2.9.5",
     "react-i18next": "^13.0.3",
     "react-icons": "^4.10.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "unchanged": "^2.2.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -54,6 +58,7 @@
     "@storybook/react-webpack5": "^7.1.0-alpha.41",
     "@storybook/testing-library": "^0.2.0-next.1",
     "@svgr/webpack": "^8.0.1",
+    "@types/hoist-non-react-statics": "^3.3.1",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
