--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "baseUrl": ".",
     "plugins": [{ "name": "typescript-plugin-css-modules" }],
     "paths": {
-      "*": ["./src/*"]
+      "@src/*": ["src/*"]
     }
   },
   "ts-node": {
