--- a/package.json
+++ b/package.json
@@ -27,15 +27,20 @@
   },
   "homepage": "https://github.com/JIlyaS/JIlyaS.github.io#readme",
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
+    "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-focus-lock": "^2.9.5",
+    "react-hook-form": "^7.46.1",
     "react-i18next": "^13.0.3",
     "react-icons": "^4.10.1",
+    "react-router-dom": "^6.16.0",
+    "react-select": "^5.7.5",
     "typescript": "^5.0.4",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
@@ -58,6 +63,7 @@
     "@svgr/webpack": "^8.0.1",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
